[gd_scene format=3 uid="uid://o1ojbpayppki"]

[ext_resource type="PackedScene" uid="uid://chupiwnqy5234" path="res://Scenes/Menus/popup_menu.tscn" id="1_hxpan"]
[ext_resource type="Script" uid="uid://cocwfdxjwc40w" path="res://Scenes/Menus/Billing/ad_removal_popup.gd" id="2_2uel7"]
[ext_resource type="Theme" uid="uid://caljym4n8ghq8" path="res://Assets/Styles/DefaultTheme.tres" id="3_4cmwp"]

[node name="AdRemovalPopup" unique_id=742566856 instance=ExtResource("1_hxpan")]
script = ExtResource("2_2uel7")

[node name="ScrollContainer" parent="OuterPanelContainer" parent_id_path=PackedInt32Array(1354738231) index="0" unique_id=910289530]
custom_minimum_size = Vector2(610, 350)

[node name="VBoxContainer" type="VBoxContainer" parent="OuterPanelContainer/ScrollContainer/InnerContainer" parent_id_path=PackedInt32Array(1316018813) index="0" unique_id=1857447480]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="OuterPanelContainer/ScrollContainer/InnerContainer/VBoxContainer" index="0" unique_id=1172669977]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_4cmwp")
theme_type_variation = &"HeaderLarge"
text = "AD_REMOVAL_TITLE"
horizontal_alignment = 1
autowrap_mode = 3

[node name="DescriptionLabel" type="Label" parent="OuterPanelContainer/ScrollContainer/InnerContainer/VBoxContainer" index="1" unique_id=378930257]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_4cmwp")
theme_type_variation = &"HeaderMedium"
text = "AD_REMOVAL_DESCRIPTION"
horizontal_alignment = 1
autowrap_mode = 3

[node name="PriceLabel" type="Label" parent="OuterPanelContainer/ScrollContainer/InnerContainer/VBoxContainer" index="2" unique_id=432982813]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_4cmwp")
horizontal_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="OuterPanelContainer/ScrollContainer/InnerContainer/VBoxContainer" index="3" unique_id=971621022]
layout_mode = 2
size_flags_horizontal = 4

[node name="Button_Yes" type="Button" parent="OuterPanelContainer/ScrollContainer/InnerContainer/VBoxContainer/HBoxContainer" index="0" unique_id=1564857878]
custom_minimum_size = Vector2(130, 50)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_4cmwp")
text = "AD_REMOVAL_YES"

[node name="Button_No" type="Button" parent="OuterPanelContainer/ScrollContainer/InnerContainer/VBoxContainer/HBoxContainer" index="1" unique_id=255784658]
custom_minimum_size = Vector2(130, 50)
layout_mode = 2
size_flags_horizontal = 6
theme = ExtResource("3_4cmwp")
text = "AD_REMOVAL_NO"
