extends PopupContainer

@onready var price_label: Label = $OuterPanelContainer/ScrollContainer/InnerContainer/VBoxContainer/PriceLabel
@onready var button_yes: Button = $OuterPanelContainer/ScrollContainer/InnerContainer/VBoxContainer/HBoxContainer/Button_Yes
@onready var button_no: Button = $OuterPanelContainer/ScrollContainer/InnerContainer/VBoxContainer/HBoxContainer/Button_No
